mappers refactoring for more readability